--- a/css/Style.css
+++ b/css/Style.css
@@ -169,7 +169,7 @@ h1{
     font-size: 20px;
     font-weight: bold;
     color: #ffffff;
-    margin-bottom: 53px;
+    margin-bottom: 33px;
 }
 
 .materials{
@@ -183,7 +183,7 @@ h1{
 }
 
 .techs{
-    background: url("../img/svg-technomart/icon-3.svg") #dc91d8e3 no-repeat 190px 54.5%;
+    background: url("../img/svg-technomart/icon-3.svg") #dc91d8 no-repeat 190px 54.5%;
     order:3;
 }
 
@@ -316,7 +316,7 @@ header li{
 
 .index-header{
     background-color: #f4f7f9;
-    padding-bottom:42px;  
+    padding-bottom:43px;  
 }
     
 .index-header p{
@@ -807,6 +807,7 @@ Main
     padding: 5px 23px;
     width:300px;
     min-height: 123px;
+    margin-bottom: 20px;
 }
 
 .slide{
@@ -814,7 +815,6 @@ Main
     box-sizing: border-box;
     padding: 0;
     margin-right:0px;
-    margin-top:20px;
     width: 620px;
     min-height: 266px;
     order:4;
@@ -851,10 +851,7 @@ Main
     order: 5;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
-    align-self: flex-end;
 }
 
 .features-block .sales{
@@ -872,6 +869,7 @@ Main
 
 .transparent-button{
     display: inline-block;
+    vertical-align: middle;
     text-align: center;
     text-transform: uppercase;
     min-width: 135px;
@@ -930,7 +928,7 @@ Main
     font-size: 18px;
     max-width: 394px;
     margin: 0px;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
 }
 
 
@@ -1004,12 +1002,11 @@ Main
     width: 218px;
     margin: 0;
     margin-bottom: 21px;
-    
+    vertical-align: middle;
     line-height: 20px;
     font-family:"ptsans", "Arial", "Arial Narrow", "sans-serif";
     font-weight: bold;
     text-align: center;
-    
     border: 1px solid #ccc;
 }
 
@@ -1300,7 +1297,6 @@ Main
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 240px;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -1908,6 +1904,10 @@ Main
     position: relative;
 }
 
+.filter-energy label:hover,
+.filter-producers label:hover{
+    fill: #b5b5b5;
+}
 
 .filter-producers li,
 .filter-energy li{
@@ -1932,6 +1932,7 @@ Main
 
 .producers-checkbox:checked ~ .checkbox-on{
     display: inline-block;
+    vertical-align: middle;
 }
 
 .producers-checkbox:checked ~ .checkbox-off{
@@ -1940,7 +1941,7 @@ Main
 
 /********focus-border*********/
 .producers-checkbox:focus ~ .checkbox{
-    box-shadow: 0 0 3px 1px #acb8a5;
+    box-shadow: 0 0 3px 1px #2d6f9b;
     border-radius: 2px;
 }
 
@@ -1951,6 +1952,10 @@ Main
 
  .producers-checkbox:disabled + .checkbox{
     fill: #e9e9e9;
+}
+
+.producers-checkbox:disabled{
+    color: #e9e9e9;
 } 
 
 /***********filter-radio**************/
